test/types/records/sungeun/recursiveRecord.good
recursiveRecord.chpl:3: error: Record has infinite size (field 'r' has same type as enclosing record)
