test/types/records/sungeun/recursiveRecord.chpl
pragma "use default init"
record R {
  var r: R;
}
